kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: europe-west1-docker.pkg.dev/gruppo-11/study-buddy-repo/frontend:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort # Temporarily expose for testing, Ingress is next
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
